<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:background="@drawable/splash_bg"
    android:layout_height="match_parent">


    <ImageView
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:background="@drawable/splash_logo"
        android:layout_height="wrap_content" />


    <RelativeLayout
        android:paddingBottom="10dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:id="@+id/layoutContainer"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/editTextEmail"
            android:gravity="center"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:background="@drawable/selector_edittext"
            android:hint="@string/email"
            android:layout_height="wrap_content" />

        <EditText
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/editTextEmail"
            android:id="@+id/editTextPassword"
            android:gravity="center"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:background="@drawable/selector_edittext"
            android:hint="@string/password"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:id="@+id/layoutForgotPasswordContainer"
            android:layout_marginTop="15dp"
            android:layout_below="@id/editTextPassword"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:textColor="@color/colorAccent"
                android:layout_weight="1"
                android:textSize="14dp"
                android:textStyle="bold"
                android:text="@string/forgot_password"
                android:layout_height="wrap_content" />


            <TextView
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:id="@+id/textViewForgotPassword"
                android:layout_width="0dp"
                android:gravity="right"
                android:layout_weight="1"
                android:textSize="14dp"
                android:text="@string/click_here"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <Button
            android:layout_marginTop="30dp"
            android:layout_below="@id/layoutForgotPasswordContainer"
            android:id="@+id/buttonLogin"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:background="@drawable/selector_button"
            android:text="@string/signinnow"
            android:textStyle="bold"
            android:layout_height="wrap_content" />



        <TextView
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:id="@+id/textViewRegister"
            android:layout_width="match_parent"
             android:gravity="center"
            android:layout_below="@+id/buttonLogin"
            android:textSize="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/don_t_have_an_account_please_register"
            android:layout_height="wrap_content" />


    </RelativeLayout>


</RelativeLayout>
