<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:background="@drawable/splash_bg"
    android:layout_height="match_parent">

<RelativeLayout
    android:gravity="center"
    android:layout_above="@+id/layoutContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/imageViewUserImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_width="150dp"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="2dp"
        android:src="@drawable/profile_selectimage"
        android:layout_height="150dp" />

</RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:id="@+id/layoutContainer"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"

        android:layout_height="wrap_content">


        <EditText
            android:inputType="textPersonName"
            android:id="@+id/editTextUserName"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:background="@drawable/selector_edittext"
            android:hint="@string/UserName"
            android:layout_height="wrap_content" />

        <EditText
            android:inputType="phone"
            android:id="@+id/editTextPhone"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:background="@drawable/selector_edittext"
            android:hint="@string/phone"
            android:layout_height="wrap_content" />

        <EditText
            android:inputType="textPostalAddress"
            android:id="@+id/editTextAddress"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:background="@drawable/selector_edittext"
            android:hint="@string/address"
            android:layout_height="wrap_content" />





        <Button
            android:layout_marginTop="30dp"
             android:id="@+id/buttonUpdateProfile"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:background="@drawable/selector_button"
            android:text="@string/updateInfo"
            android:textStyle="bold"
            android:layout_height="wrap_content" />





    </LinearLayout>


</RelativeLayout>
